--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,3 +1,6 @@
+/* Imported google font */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -12,8 +15,8 @@ body{
     flex-direction: column;
     /*Generic project styles*/
     color: rebeccapurple;
+    font-family: 'Raleway', sans-serif;
 }
-
 
 /* Header */
 header{
