--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -12,25 +12,31 @@ h1 {
 }
 /* General styles*/
 body{
-    min-height : 100vh;/*using min-height will allow it to streth larger than the height of the screenwhen thiers enough content on the page when the user needs to scroll*/
-    /*using display flex and display direction to column will show our elements underneath eachother */
+    min-height : 100vh;/*using min-height will allow it to stretch larger than the height of the screen when thiers enough content on the page when the user needs to scroll*/
+    /* using display flex and display direction to column will show our elements underneath eachother */
     display: flex;
     flex-direction: column;
-    /*Generic project styles*/
-    color: rebeccapurple;
+    /* Generic project styles */
+    color: #ffffff;
     font-family: 'Raleway', sans-serif;
 }
 
 /* Header */
 header{
-    background-color: bisque;
+    background-color: black;
+    padding: 0 1rem;/* I added padding left and right to prevent text from sticking to the side of the screen */
+    position:  fixed;/* I used position fixed to allow the navbar to scroll along */
+    z-index: 99; /* I used z-index value of 99 to make sure its layered on top of any other elements that have an z-index later on */
+    width: 100%; 
+    box-shadow: 0 2px 2px #fafafa;/* I added box-shadow to indicate that its layered on top of the other content by creating an effect of a shadow below it */
 }
 
 /* Main content */
 main{
     background-color: royalblue;
-    /*Added flex shorthand to take up any surplus space to push footer down*/
+    /* Added flex shorthand to take up any surplus space to push footer down */
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 
 /* Footer */
