--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -142,6 +142,7 @@ main {
   color: #ffffff;
   margin: 2px;
   border: 1px inset white;
+  border-radius: 20px;
 }
 
 #section-about h2 {
@@ -164,6 +165,7 @@ main {
   color: #ffffff;
   margin: 2px;
   border: 1px outset whitesmoke;
+  border-radius: 20px;
 }
 
 #section-qualification h2 {
@@ -317,6 +319,21 @@ main {
   border: 1px inset #7c7878;
 }
 
+#faqs {
+    border: 1.6px solid #fff;
+    border-radius: 10px;
+    padding:  0 1rem;
+    margin: 10px;
+}
+summary {
+    margin: 8px;
+}
+
+summary ~ p{
+
+}
+
+
 /* Footer */
 footer {
   background-color: black;
@@ -349,6 +366,8 @@ footer {
 .suii {
   text-decoration: underline;
 }
+
+
 
 /* Certain phones like the iphone  and largerx */
 @media screen and (min-width: 375px) {
@@ -418,11 +437,11 @@ footer {
   }
 
   #hero-image {
-    height: 1328px;
+    height: 900px;
   }
 
   #hero-section {
-    margin-top: 50rem;
+    margin-top: 30rem;
   }
 
   #hero-section h1 {
@@ -435,7 +454,7 @@ footer {
   }
 
   #section-about {
-    font-size: 25px;
+    font-size: 23px;
     font-style: italic;
     letter-spacing: 1px;
     padding: 0.6rem;
@@ -460,7 +479,7 @@ footer {
   }
 
   #section-qualification {
-    font-size: 25px;
+    font-size: 23px;
     font-style: italic;
     letter-spacing: 1px;
     padding: 0.6rem;
@@ -499,7 +518,7 @@ footer {
     border-radius: 10px;
     padding: 0 0.5rem;
     margin: 0;
-    font-size: 25px;
+    font-size: 21px;
     font-style: italic;
     letter-spacing: 1px;
     padding: 0.4rem;
@@ -531,7 +550,7 @@ footer {
     border: 2px solid;
     border-radius: 10px;
     padding: 0 0.5rem;
-    font-size: 25px;
+    font-size: 21px;
     font-style: italic;
     padding: 0.4rem;
     margin: 5px;
@@ -563,7 +582,7 @@ footer {
     border-radius: 10px;
     padding: 0 0.5rem;
     margin: 0;
-    font-size: 25px;
+    font-size: 21px;
     font-style: italic;
     letter-spacing: 1px;
     padding: 0.4rem;
@@ -595,7 +614,7 @@ footer {
     border: 2px solid;
     border-radius: 10px;
     padding: 0 0.5rem;
-    font-size: 25px;
+    font-size: 22px;
     font-style: italic;
     padding: 0.4rem;
     color: #ffffff;
@@ -650,16 +669,27 @@ footer {
   #hero-section p {
     font-size: 1.4rem;
   }
+
+  summary:hover {
+    border-bottom: 1px solid #000;
+}
+
 }
 
 @media screen and (min-width: 1024px) {
-  #hero-image {
-    height: 1675px;
+  header {
+    margin-bottom: 20px;
+    font-size: 1.6rem;
+    padding: 7px;
+  }
+  
+    #hero-image {
+    height: 1330px;
     width: auto;
   }
 
   #hero-section {
-    margin-top: 58rem;
+    margin-top: 48rem;
   }
   #hero-section h1 {
     font-weight: 900;
@@ -858,33 +888,33 @@ footer {
   }
 }
 
-/* Media query: Desktops and larger ( 1280 and up)*/
-@media screen and (min-width: 1280px) {
+/* Media query: Desktops and larger ( 1440 and up)*/
+@media screen and (min-width: 1440px) {
   header {
     font-size: 2.2rem;
-    margin-bottom: 15px;
   }
 
   #hero-image {
-    height: 2710px;
+    height: 2725px;
     width: auto;
   }
   
   #hero-section {
-    margin-top: 100rem;
+    margin-top: 90rem;
   }
   
 
   #hero-section  p{
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 600;
     text-align: justify;
   }
 
   #hero-section h1 {
-    font-size:  9rem;
+    font-size:  7rem;
     font-weight: 900;
     word-spacing: 2px;
   }
-
+  
+  
 }
