--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -189,39 +189,7 @@ main {
   margin: 12px;
 }
 
-#section-assessments {
-  border: 2px solid;
-  border-radius: 10px;
-  padding: 0 0.5rem;
-  margin: 0;
-  font-size: 10px;
-  font-style: italic;
-  letter-spacing: 1px;
-  padding: 0.4rem;
-  margin: 5px;
-  color: #ffffff;
-  margin: 3px;
-}
-
-#section-assessments img {
-  max-height: auto;
-  width: 100%;
-  border-radius: 15px;
-}
-
-#section-assessments h3 {
-  text-decoration: underline;
-  padding: 5px;
-  font-weight: 800;
-  font-size: 1rem;
-}
-
-#section-assesments p {
-  line-height: 5px;
-  text-align: justify;
-}
-
-#section-personal {
+#section-offer {
   border: 2px solid;
   border-radius: 10px;
   padding: 0 0.5rem;
@@ -233,83 +201,20 @@ main {
   margin: 8px;
 }
 
-#section-personal img {
+#section-offer img {
   max-height: auto;
   width: 100%;
   border-radius: 15px;
 }
 
-#section-personal h3 {
+#section-offer h3 {
   text-decoration: underline;
   padding: 5px;
   font-weight: 800;
   font-size: 1rem;
 }
 
-#section-personal p {
-  text-align: justify;
-  word-spacing: 0.7px;
-  padding: 2px;
-}
-
-#section-nutrition {
-  border: 2px solid;
-  border-radius: 10px;
-  padding: 0 0.5rem;
-  margin: 0;
-  font-size: 10px;
-  font-style: italic;
-  letter-spacing: 1px;
-  padding: 0.4rem;
-  margin: 5px;
-  color: #ffffff;
-  margin: 3px;
-}
-
-#section-nutrition img {
-  max-height: auto;
-  width: 100%;
-  border-radius: 15px;
-}
-
-#section-nutrition h3 {
-  text-decoration: underline;
-  padding: 5px;
-  font-weight: 800;
-  font-size: 1rem;
-}
-
-#section-nutrition p {
-  word-spacing: 0.7px;
-  padding: 2px;
-}
-
-#section-equipment {
-  border: 2px solid;
-  border-radius: 10px;
-  padding: 0 0.5rem;
-  font-size: 10px;
-  font-style: italic;
-  padding: 0.4rem;
-  margin: 5px;
-  color: #ffffff;
-  margin: 8px;
-}
-
-#section-equipment img {
-  max-height: auto;
-  width: 100%;
-  border-radius: 15px;
-}
-
-#section-equipment h3 {
-  text-decoration: underline;
-  padding: 5px;
-  font-weight: 800;
-  font-size: 1rem;
-}
-
-#section-equipment p {
+#section-offer p {
   text-align: justify;
   word-spacing: 0.7px;
   padding: 2px;
@@ -513,104 +418,7 @@ footer {
     margin: 12px;
   }
 
-  #section-assessments {
-    border: 2px solid;
-    border-radius: 10px;
-    padding: 0 0.5rem;
-    margin: 0;
-    font-size: 21px;
-    font-style: italic;
-    letter-spacing: 1px;
-    padding: 0.4rem;
-    margin: 5px;
-    color: #ffffff;
-    margin: 15px 8px 15px 8px;
-  }
-
-  #section-assessments img {
-    max-height: auto;
-    width: 100%;
-    border-radius: 15px;
-  }
-
-  #section-assessments h3 {
-    text-decoration: underline;
-    padding: 5px;
-    font-weight: 900;
-    font-size: 2.6rem;
-  }
-
-  #section-assesments p {
-    text-align: justify;
-    word-spacing: 0.3px;
-    padding: 2px;
-  }
-
-  #section-personal {
-    border: 2px solid;
-    border-radius: 10px;
-    padding: 0 0.5rem;
-    font-size: 21px;
-    font-style: italic;
-    padding: 0.4rem;
-    margin: 5px;
-    color: #ffffff;
-    margin: 15px 8px 15px 8px;
-  }
-
-  #section-personal img {
-    max-height: auto;
-    width: 100%;
-    border-radius: 15px;
-  }
-
-  #section-personal h3 {
-    text-decoration: underline;
-    padding: 5px;
-    font-weight: 800;
-    font-size: 2.6rem;
-  }
-
-  #section-personal p {
-    text-align: justify;
-    word-spacing: 0.3px;
-    padding: 2px;
-  }
-
-  #section-nutrition {
-    border: 2px solid;
-    border-radius: 10px;
-    padding: 0 0.5rem;
-    margin: 0;
-    font-size: 21px;
-    font-style: italic;
-    letter-spacing: 1px;
-    padding: 0.4rem;
-    margin: 5px;
-    color: #ffffff;
-    margin: 15px 8px 15px 8px;
-  }
-
-  #section-nutrition img {
-    max-height: auto;
-    width: 100%;
-    border-radius: 15px;
-  }
-
-  #section-nutrition h3 {
-    text-decoration: underline;
-    padding: 5px;
-    font-weight: 900;
-    font-size: 2.6rem;
-  }
-
-  #section-nutrition p {
-    text-align: justify;
-    word-spacing: 0.3px;
-    padding: 2px;
-  }
-
-  #section-equipment {
+  #section-offer {
     border: 2px solid;
     border-radius: 10px;
     padding: 0 0.5rem;
@@ -621,20 +429,20 @@ footer {
     margin: 15px 8px 15px 8px;
   }
 
-  #section-equipment img {
+  #section-offer img {
     max-height: auto;
     width: 100%;
     border-radius: 15px;
   }
 
-  #section-equipment h3 {
+  #section-offer h3 {
     text-decoration: underline;
     padding: 5px;
     font-weight: 900;
     font-size: 2.6rem;
   }
 
-  #section-equipment p {
+  #section-offer p {
     text-align: justify;
     word-spacing: 0.7px;
   }
@@ -664,7 +472,7 @@ footer {
 
   #hero-section h1 {
     font-weight: 900;
-    font-size: 2.1rem;
+    font-size: 2rem;
   }
   #hero-section p {
     font-size: 1.4rem;
@@ -760,126 +568,31 @@ footer {
     margin: 12px;
   }
 
-  #section-assessments {
+  #section-offer {
     border: 2px solid;
     border-radius: 10px;
     font-size: 30px;
     font-style: italic;
-    padding: 0.5rem;
+    padding: 1rem;
     color: #ffffff;
-    margin: 16px 8px 16px 8px;
+    margin: 15px;
   }
 
-  #section-assessments img {
+  #section-offer img {
     max-height: auto;
     width: 100%;
     border-radius: 15px;
   }
 
-  #section-assessments h3 {
+  #section-offer h3 {
     text-decoration: underline;
-    padding: 5px;
     font-weight: 900;
     font-size: 3rem;
   }
 
-  #section-assesments p {
-    line-height: 10px;
-    text-align: justify;
-    word-spacing: 0.3px;
-    padding: 2px;
-    letter-spacing: 0.7px;
-  }
-
-  #section-personal {
-    border: 2px solid;
-    border-radius: 10px;
-    font-size: 30px;
-    font-style: italic;
-    padding: 0.5rem;
-    color: #ffffff;
-    margin: 15px 8px 15px 8px;
-  }
-
-  #section-personal img {
-    max-height: auto;
-    width: 100%;
-    border-radius: 15px;
-  }
-
-  #section-personal h3 {
-    text-decoration: underline;
-    padding: 5px;
-    font-weight: 900;
-    font-size: 3rem;
-  }
-
-  #section-personal p {
-    text-align: justify;
-    word-spacing: 0.3px;
-    padding: 2px;
-    letter-spacing: 0.7px;
-  }
-
-  #section-nutrition {
-    border: 2px solid;
-    border-radius: 10px;
-    margin: 0;
-    font-size: 30px;
-    font-style: italic;
-    padding: 0.5rem;
-    color: #ffffff;
-    margin: 15px 8px 15px 8px;
-  }
-
-  #section-nutrition img {
-    max-height: auto;
-    width: 100%;
-    border-radius: 15px;
-  }
-
-  #section-nutrition h3 {
-    text-decoration: underline;
-    padding: 5px;
-    font-weight: 900;
-    font-size: 3rem;
-    letter-spacing: 0.7px;
-  }
-
-  #section-nutrition p {
-    text-align: justify;
-    word-spacing: 0.3px;
-    padding: 2px;
-    letter-spacing: 0.7px;
-  }
-
-  #section-equipment {
-    border: 2px solid;
-    border-radius: 10px;
-    font-size: 30px;
-    font-style: italic;
-    padding: 0.5rem;
-    color: #ffffff;
-    margin: 15px 8px 15px 8px;
-  }
-
-  #section-equipment img {
-    max-height: auto;
-    width: 100%;
-    border-radius: 15px;
-  }
-
-  #section-equipment h3 {
-    text-decoration: underline;
-    padding: px;
-    font-weight: 900;
-    font-size: 3rem;
-  }
-
-  #section-equipment p {
+  #section-offer p {
     text-align: justify;
     word-spacing: 0.7px;
-    padding: 2px;
     letter-spacing: 0.7px;
   }
 
